[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/PixelSpaceRage/256px/Proton_Large_png_processed.png" type="Texture" id=1]
[ext_resource path="res://src/Projectiles/PhotonBullet.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 6.22395

[sub_resource type="CircleShape2D" id=2]
radius = 6.92107

[sub_resource type="CircleShape2D" id=3]
radius = 6.51232

[sub_resource type="CircleShape2D" id=4]
radius = 6.74411

[node name="PhotonBullet" type="Area2D"]
script = ExtResource( 2 )

[node name="ParticleOne" type="Area2D" parent="." groups=[
"enemy_bullet",
]]
position = Vector2( -0.891876, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParticleOne"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="ParticleOne"]
texture = ExtResource( 1 )

[node name="ParticleTwo" type="Area2D" parent="." groups=[
"enemy_bullet",
]]
position = Vector2( -17.3706, 0.927977 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParticleTwo"]
position = Vector2( 16.593, -0.890898 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="ParticleTwo"]
position = Vector2( 16.8519, -0.556812 )
texture = ExtResource( 1 )

[node name="ParticleThree" type="Area2D" parent="." groups=[
"enemy_bullet",
]]
position = Vector2( -26.4913, 1.29957 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParticleThree"]
position = Vector2( 25.7247, -1.55907 )
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="ParticleThree"]
position = Vector2( 26.0029, -0.759672 )
texture = ExtResource( 1 )

[node name="ParticleFour" type="Area2D" parent="." groups=[
"enemy_bullet",
]]
position = Vector2( -31.388, 1.57647 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParticleFour"]
position = Vector2( 31.1814, -1.89316 )
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="ParticleFour"]
position = Vector2( 31.4904, -1.55907 )
texture = ExtResource( 1 )

[node name="ParticleFive" type="Area2D" parent="." groups=[
"enemy_bullet",
]]
position = Vector2( -31.3879, 1.57648 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParticleFive"]
position = Vector2( 31.1814, -1.89316 )
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="ParticleFive"]
position = Vector2( 31.4904, -1.55907 )
texture = ExtResource( 1 )
